# etc

./: .editorconfig  .env.example  .gitignore  .gitmodules  .luacheckrc  .prettierignore  .prettierrc  .terraform.lock.hcl  LICENSE  Makefile  NOTICE  README.md  aerospace.toml  alacritty.toml  ansible.cfg  aws_config  bash_profile  bootstrap  bootstrap.bak  color_scheme.sh  colors.sh  directories.sh  editorconfig  etc.toml  fi.anttikivi.kittycolors.plist  gitconfig  install  install.conf.yaml  kitty.conf  kitty_change_colors.sh  kitty_watch_colors.sh  local.yml  main.tf  prettier.config.cjs  prettier.config.js  pyproject.toml  setup  ssh_config  stylua.toml  terminals.sh  (+9 more)
.github/: dependabot.yml
.github/workflows/: gitguardian.yml  main.yml
bash/: aliases.sh
config/: aerospace.toml  alacritty.toml  editorconfig  skhdrc  tmux.conf  wezterm.lua  yabairc  zprofile  zshenv  zshrc
env/: colors.sh
extras/: darwin-brew-accessories-casks  darwin-brew-casks  darwin-brew-chat-casks  darwin-brew-etc-casks  darwin-brew-font-casks  darwin-brew-formulae  darwin-brew-graphics-casks  darwin-brew-security-casks  darwin-brew-university-casks  darwin-brew-web-casks  darwin-brew-work-casks
group_vars/all/: common.yml  vault.yml
installs/: alacritty  aws  aws.sh  create_aws_config.sh  create_ssh_config.sh  gcloud.sh  go  go.sh  install_rust  install_utils.sh  kitty  kitty.sh  lua.sh  node  node.sh  nvim  nvim.sh  php  rust  rust.sh  toml  utils.sh
kitty/: kitty.conf  user.conf
nvim/: .stow-local-ignore  README.md  init.lua  lazy-lock.json  stylua.toml
nvim-2024/: init.lua
nvim/ftdetect/: gotmpl.vim
pre_tasks/: executables.yml  user.yml
runs/: alacritty  aws  gcloud  go  kitty  node  nvim  php  rust  toml
scripts/: create_ssh_config.sh  install_go.sh  install_kitty.sh  install_nvim.sh  install_utils.sh  kitty.sh  nvim.sh  run_nvim_tasks.sh  uninstall  versions.sh
setup/: install
src/etc/: __main__.py  args.py  bootstrap.py  cli.py  config.py  context.py  defaults.py  exceptions.py  install.py  message_level.py  parser.py  (+5 more)
templates/: aws_cli_choices.xml  aws_config  fi.anttikivi.colorscheme.plist  fi.anttikivi.kittycolors.plist  ssh_config
utils/: aws_config.sh  colors.sh  kitty_change_colors.sh  ssh_config.sh  update_color_scheme_daemon  update_encrypted_config  update_public_keys
wezterm/: colorscheme.lua  config.lua  fonts.lua  keys.lua  wezterm.lua
zsh/: aliases.zsh  completion.zsh  dirs.zsh  glob.zsh  history.zsh  keybindings.zsh  profile.zsh  shortcuts.zsh
(+232 files in other folders)
