[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "etc"
dynamic = ["version"]
description = 'Script for managing my environment'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Antti Kivi", email = "antti@anttikivi.fi" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.scripts]
etc = "etc.cli:etc"

[project.urls]
Documentation = "https://github.com/Antti Kivi/etc#readme"
Issues = "https://github.com/Antti Kivi/etc/issues"
Source = "https://github.com/Antti Kivi/etc"

[tool.hatch.version]
path = "src/etc/__about__.py"

[tool.hatch.build.targets.sdist]
only-include = ["src"]
[tool.hatch.build.targets.sdist.sources]
"src/etc" = "etc"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
[tool.hatch.build.targets.wheel.sources]
"src/etc" = "etc"
