[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etc"
dynamic = ["version"]
description = "Tool for managing workstation configuration"
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [{ name = "Antti Kivi", email = "antti@anttikivi.fi" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.scripts]
etc = "etc.cli:main"

[project.entry-points."pipx.run"]
etc = "etc.cli:main"

[project.urls]
Documentation = "https://github.com/anttikivi/etc#readme"
Issues = "https://github.com/anttikivi/etc/issues"
Source = "https://github.com/anttikivi/etc"

[tool.setuptools.dynamic]
version = { attr = "etc.__version__" }

[tool.ruff]
indent-width = 4
line-length = 79

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"
